This might fix clipping issues on some browsers

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,3 @@
-.custom-cur {
-  cursor: url('/logo.png');
-}
-
 body {
   background: #f8f9fa;
   font-family: 'Montserrat', sans-serif;
@@ -10,6 +6,7 @@ body {
   touch-action: manipulation;
   position: relative;
   overflow-x: hidden;
+  z-index: 100;
 }
 
 .title {
